--- a/app/sass/common/_typography.sass
+++ b/app/sass/common/_typography.sass
@@ -28,21 +28,33 @@
 .text-xl
 	font-size: 34px
 	line-height: 40px
-	+media-breakpoint-down(sm)
-		font-size: 24px
+	+media-breakpoint-down(lg)
+		font-size: 27px
+		line-height: 32px
+	+media-breakpoint-down(md)
+		font-size: 22px
 		line-height: 32px
 .text-lg
 	font-size: 27px
 	line-height: 32px
-	+media-breakpoint-down(sm)
+	+media-breakpoint-down(lg)
+		font-size: 22px
+		line-height: 32px
+	+media-breakpoint-down(md)
 		font-size: 20px
 		line-height: 24px
 .text-md
 	font-size: 22px
 	line-height: 32px
+	+media-breakpoint-down(lg)
+		font-size: 18px
+		line-height: 24px
 .text-sm
 	font-size: 18px
 	line-height: 24px
+	+media-breakpoint-down(lg)
+		font-size: 16px
+		line-height: 22px
 .text-xs
 	font-size: 15px
 	line-height: 24px
