--- a/app/sass/components/_buttons.sass
+++ b/app/sass/components/_buttons.sass
@@ -18,6 +18,8 @@
 	outline: none!important
 	user-select: none
 	transition: $trs
+	+media-breakpoint-down(md)
+		font-size: 13px
 	> .icon
 		width: 20px
 		height: 20px
@@ -85,42 +87,6 @@
 			transition: transform .3s ease
 			background: url('../images/dist/icons/dropdown-arrow.svg') no-repeat center/16px
 
-	// Compare, Wishlist & Shopping cart buttons
-	&.btn-compare,
-	&.btn-wishlist,
-	&.btn-shopping-cart
-		width: 48px
-		padding-left: 0
-		padding-right: 0
-		border-radius: 50%
-		color: $text-300
-		&:hover
-			border-color: $text-200
-			background-color: $text-200
-			color: $text-500
-		.icon
-			width: 24px
-			height: 24px
-		.badge
-			overflow: hidden
-			position: absolute
-			top: -8px
-			left: 32px
-			z-index: 2
-			display: flex
-			align-items: center
-			justify-content: center
-			width: 24px
-			height: 24px
-			border-radius: 50%
-			background-color: $yellow
-			color: $text-500
-			font-size: 12px
-			font-weight: $w-medium
-			text-align: center
-	&.btn-shopping-cart
-		color: $green
-	
 	// Add to cart button
 	&.btn-cart
 		padding-left: 30px
@@ -148,7 +114,7 @@
 				span
 					margin-left: 12px
 					color: $text-500
-					@include font-size(xxs)
+					+font-size(xxs)
 					font-weight: $w-regular
 					> a
 						color: #219653
@@ -161,8 +127,15 @@
 			.after-added
 				display: none
 
-	// Quick buy button
-	&.btn-quick-buy
-		margin-top: 8px
-		font-size: 15px
-		color: #219653
+	// Close button
+	&.btn-close
+		height: auto
+		padding-left: 0
+		padding-right: 0
+		.icon
+			width: 24px
+			height: 24px
+		&:hover
+			color: $warning
+		&:focus
+			box-shadow: 0 0 0 3px rgba($warning, 0.25)
