--- a/app/sass/components/_dropdown.sass
+++ b/app/sass/components/_dropdown.sass
@@ -28,7 +28,7 @@
 		&-item
 			position: relative
 			display: flex
-			@include font-size(xxs)
+			+font-size(xxs)
 			&:not(:last-child)
 				margin-bottom: 16px
 				padding-bottom: 16px
