--- a/app/sass/modules/_page.sass
+++ b/app/sass/modules/_page.sass
@@ -1,3 +1,9 @@
 main
 	padding-top: 24px
 	padding-bottom: 112px
+	+media-breakpoint-down(lg)
+		padding-bottom: 64px
+	+media-breakpoint-down(md)
+		padding-bottom: 48px
+	+media-breakpoint-down(sm)
+		padding-top: 12px
