--- a/app/sass/pages/home.sass
+++ b/app/sass/pages/home.sass
@@ -12,14 +12,26 @@
 	&-slider
 		position: relative
 		overflow: hidden
+		height: 100%
 		border-radius: 8px
 		background-color: $text-200
+		+media-breakpoint-down(md)
+			height: 300px
+		&-photo
+			height: 100%
+			img
+				object-position: left center
 	&-product-slider
 		position: relative
 		overflow: hidden
+		max-width: 312px
 		height: 100%
 		border-radius: 8px
 		background-color: $yellow
+		+media-breakpoint-down(md)
+			max-width: 100%
+			height: auto
+			margin-top: 16px
 		&::before,
 		&::after
 			content: ''
@@ -34,32 +46,64 @@
 		&::before
 			top: -40px
 			right: -30px
+			+media-breakpoint-down(sm)
+				top: -70px
+				right: -100px
 		&::after
 			left: -100px
 			bottom: -60px
+			+media-breakpoint-down(sm)
+				bottom: -80px
+			+media-breakpoint-down(xs)
+				display: none
 		.swiper-pagination
 			bottom: 16px
 		.product
 			padding: 16px
 			text-align: center
 			&-heading
-				margin-bottom: 18px
+				margin-bottom: 16px
 				text-transform: uppercase
+				+media-breakpoint-down(sm)
+					color: $white
 			&-photo
 				width: 200px
 				height: 200px
 				margin: 0 auto
+				img
+					padding: 8px
+				+media-breakpoint-down(lg)
+					width: 130px
+					height: 130px
+				+media-breakpoint-down(sm)
+					width: 100px
+					height: 100px
+				+media-breakpoint-down(xs)
+					width: 72px
+					height: 72px
 			&-meta
 				margin-top: 22px
+				+media-breakpoint-down(lg)
+					max-width: 75%
+					margin-top: 16px
+					margin-left: auto
+					margin-right: auto
+				+media-breakpoint-down(md)
+					margin-top: 8px
 				.title
 					display: block
-					@include font-size(xs)
+					+font-size(xs)
 					font-weight: $w-bold
+					+media-breakpoint-down(lg)
+						+font-size(xxs)
 				.price
 					display: block
 					margin-top: 25px
-					@include font-size(xs)
+					+font-size(xs)
 					font-weight: $w-bold
+					+media-breakpoint-down(lg)
+						margin-top: 8px
+						font-size: 13px
 			&-permalink
 				position: absolute
 				top: 0
@@ -69,11 +113,20 @@
 
 // Section: Advantages
 .h-advantages
+	&-wrapper
+		+media-breakpoint-down(md)
+			overflow-x: auto
+			flex-wrap: nowrap
+			> [class*="col"]
+				flex-basis: 45%
+				max-width: 45%
 	&-item
 		padding: 8px
 		.picture
 			position: relative
 			margin-bottom: 24px
+			+media-breakpoint-down(md)
+				margin-bottom: 16px
 			img
 				position: absolute
 				left: 24px
@@ -85,31 +138,38 @@
 				position: relative
 				z-index: 1
 				display: block
-				width: 56px
-				height: 56px
-				border-radius: 24px
-				background-color: $yellow
-				&::after
-					content: ''
-					position: absolute
-					top: -8px
-					right: -8px
-					width: 100%
-					height: 100%
-					border-radius: 24px
-					background-color: rgba(255, 255, 255, 0.4)
-					backdrop-filter: blur(20px)
+				width: 64px
+				height: 64px
+				background: url('../images/icon-bg.png') no-repeat center/100%
 		.title
 			margin-bottom: 8px
+			+media-breakpoint-down(lg)
+				+font-size(xxs)
+				font-weight: $w-bold
 		.descr
 			margin-bottom: 0
+			color: $text-400
+			+media-breakpoint-down(lg)
+				font-size: 13px
+				line-height: 20px
 
 // Section: Questions form
 .h-questions
-	&-inner
-		padding: 24px
-		border-radius: 8px
+	+media-breakpoint-down(md)
 		background-color: $background
+	&-inner
+		padding-top: 24px
+		padding-bottom: 24px
+		+media-breakpoint-up(lg)
+			padding-left: 24px
+			padding-right: 24px
+			border-radius: 8px
+			background-color: $background
+	&-descr
+		margin-bottom: 0
+	&-form
+		+media-breakpoint-down(lg)
+			margin-top: 16px
 
 // Section: Popular categories
 .h-categories
@@ -121,12 +181,34 @@
 		padding: 24px
 		border-radius: 8px
 		background-color: $background
+		+media-breakpoint-down(lg)
+			padding: 18px
+		+media-breakpoint-down(md)
+			height: 128px
 		&::after
 			content: ''
 			position: absolute
 			z-index: -1
 			background-color: $yellow
 			transition: transform .5s ease
+			+media-breakpoint-down(md)
+				width: 140px
+				height: 140px
+				border-radius: 60px
+				top: -75px
+				right: -70px
+		&:hover
+			&::after
+				transform: scale(4)
+				+media-breakpoint-down(md)
+					transform: scale(6)
+				+media-breakpoint-down(xs)
+					transform: scale(4)
+				+media-breakpoint-down(xxs)
+					transform: scale(3)
+			.heading-link
+				opacity: 1
+				transform: none
 		&--sm
 			height: 160px
 			&::after
@@ -135,6 +217,12 @@
 				width: 140px
 				height: 140px
 				border-radius: 60px
+				+media-breakpoint-down(xl)
+					width: 130px
+					height: 130px
+				+media-breakpoint-down(lg)
+					width: 115px
+					height: 115px
 			.photo
 				right: 0
 				bottom: 10px
@@ -146,15 +234,16 @@
 				width: 170px
 				height: 170px
 				border-radius: 72px
+				+media-breakpoint-down(xl)
+					width: 160px
+					height: 160px
+				+media-breakpoint-down(lg)
+					width: 140px
+					height: 140px
+					border-radius: 60px
 			.photo
 				right: 40px
 				bottom: 30px
-		&:hover
-			&::after
-				transform: scale(4)
-			.heading-link
-				opacity: 1
-				transform: none
 		.permalink
 			position: absolute
 			top: 0
@@ -163,7 +252,9 @@
 			bottom: 0
 			z-index: 2
 		.heading
-			&--bottom
+			position: relative
+			z-index: 1
+			+media-breakpoint-down(md)
 				display: flex
 				flex-direction: column
 				justify-content: flex-end
@@ -173,17 +264,47 @@
 					margin-bottom: 0
 				.heading-link
 					order: 0
-					margin-bottom: 8px
+					margin-bottom: 4px
+			&--bottom
+				display: flex
+				flex-direction: column
+				justify-content: flex-end
+				height: 100%
+				+media-breakpoint-down(lg)
+					justify-content: flex-start
+				.heading-title
+					+media-breakpoint-up(xl)
+						order: 1
+						margin-bottom: 0
+				.heading-link
+					+media-breakpoint-up(xl)
+						order: 0
+						margin-bottom: 8px
 			&-title
 				max-width: 50%
+				+media-breakpoint-down(lg)
+					max-width: 75%
+				+media-breakpoint-down(sm)
+					max-width: 100%
+					+font-size(xxs)
+					font-weight: $w-bold
 			&-link
 				display: inline-flex
 				align-items: center
 				color: $text-500
+				font-size: 15px
 				line-height: 1
 				opacity: 0
 				transform: translate3d(-6px, 0, 0)
 				transition: $trs
+				+media-breakpoint-down(md)
+					font-size: 13px
+					.icon
+						width: 13px
+						height: 13px
+						margin-left: 3px
+				+media-breakpoint-down(xs)
+					display: none
 				.icon
 					width: 16px
 					height: 16px
@@ -192,6 +313,19 @@
 			position: absolute
 			max-width: 178px
 			max-height: 178px
+			+media-breakpoint-down(xl)
+				max-width: 136px
+				max-height: 136px
+			+media-breakpoint-down(lg)
+				max-width: 100px
+				max-height: 100px
+			+media-breakpoint-down(md)
+				top: 8px
+				left: 0
+				right: 0
+				max-width: 64px
+				max-height: 64px
+				margin: 0 auto
 
 // Section: Partners
 .h-partners
@@ -207,31 +341,72 @@
 		height: 104px
 		border-radius: 8px
 		background-color: $white
+		+media-breakpoint-down(sm)
+			height: 82px
+		+media-breakpoint-down(xs)
+			height: 64px
 		img
-			padding: 16px 24px
+			width: 72px
+			height: 72px
+			+media-breakpoint-down(sm)
+				width: 56px
+				height: 56px
+			+media-breakpoint-down(xs)
+				width: 52px
+				height: 45px
 
 // Section: Partners
 .h-trust
 	&-wrapper
 		display: flex
-		margin-left: -40px
-		margin-right: -40px
+		flex-wrap: wrap
+		+media-breakpoint-up(lg)
+			margin-left: -40px
+			margin-right: -40px
 	&-col
 		flex: 0 0 50%
 		max-width: 50%
-		padding-left: 40px
-		padding-right: 40px
+		+media-breakpoint-up(lg)
+			padding-left: 40px
+			padding-right: 40px
+		+media-breakpoint-down(md)
+			flex-basis: 100%
+			max-width: 100%
+			&:not(:last-child)
+				margin-bottom: 32px
+	&-title
+		+media-breakpoint-down(md)
+			text-align: center
 	&-clients,
 	&-certificates
 		display: flex
 		flex-wrap: wrap
 		&-item
 			position: relative
-			flex: 0 0 16.66667%
-			max-width: 16.66667%
+			+media-breakpoint-down(lg)
+				flex-basis: 25%
+				max-width: 25%
+			+media-breakpoint-down(md)
+				flex-basis: 16.66667%
+				max-width: 16.66667%
+			+media-breakpoint-down(sm)
+				flex-basis: 20%
+				max-width: 20%
+			+media-breakpoint-down(xs)
+				flex-basis: 25%
+				max-width: 25%
+			+media-breakpoint-down(xxs)
+				flex-basis: 33.33333%
+				max-width: 33.33333%
 	&-clients
 		margin: -12px -24px
+		+media-breakpoint-down(xs)
+			margin: -8px -14px
+			&-item
+				padding: 8px 14px
 		&-item
+			flex: 0 0 20%
+			max-width: 20%
 			padding: 12px 24px
 			filter: grayscale(1)
 			transition: filter .3s ease
@@ -239,8 +414,17 @@
 				filter: none
 	&-certificates
 		margin: -12px -20px
+		+media-breakpoint-down(xs)
+			margin: -8px -14px
+			&-item
+				padding: 8px 14px
 		&-item
+			flex: 0 0 16.66667%
+			max-width: 16.66667%
 			padding: 12px 20px
+			+media-breakpoint-down(xl)
+				flex-basis: 20%
+				max-width: 20%
 			&::before
 				content: ''
 				position: absolute
@@ -263,3 +447,19 @@
 				border-radius: 4px
 				border: 1px solid $text-200
 				background-color: $white
+
+// Section: News & Articles
+.h-articles
+	+media-breakpoint-down(sm)
+		.tab-pane > .text-right
+			text-align: center
+	&-wrapper
+		+media-breakpoint-down(md)
+			overflow-x: auto
+			flex-wrap: nowrap
+			> [class*="col"]
+				flex: 0 0 45%
+				max-width: 45%
+				+media-breakpoint-down(sm)
+					flex-basis: 75%
+					max-width: 75%
