--- a/app/sass/common/_spacers.sass
+++ b/app/sass/common/_spacers.sass
@@ -12,25 +12,45 @@
 
 .mt-24
 	margin-top: 24px
+	+media-breakpoint-down(md)
+		margin-top: 16px
 .mb-24
 	margin-bottom: 24px
+	+media-breakpoint-down(md)
+		margin-bottom: 16px
 
 .mt-32
 	margin-top: 32px
+	+media-breakpoint-down(md)
+		margin-top: 24px
 .mb-32
 	margin-bottom: 32px
+	+media-breakpoint-down(md)
+		margin-bottom: 24px
 
 .mt-48
 	margin-top: 48px
+	+media-breakpoint-down(md)
+		margin-top: 32px
 .mb-48
 	margin-bottom: 48px
+	+media-breakpoint-down(md)
+		margin-bottom: 32px
 
 .mt-64
 	margin-top: 64px
+	+media-breakpoint-down(md)
+		margin-top: 48px
 .mb-64
 	margin-bottom: 64px
+	+media-breakpoint-down(md)
+		margin-bottom: 48px
 
 .mt-96
 	margin-top: 96px
+	+media-breakpoint-down(md)
+		margin-top: 64px
 .mb-96
 	margin-bottom: 96px
+	+media-breakpoint-down(md)
+		margin-bottom: 64px
