--- a/app/sass/components/_cards.sass
+++ b/app/sass/components/_cards.sass
@@ -40,14 +40,15 @@
 		z-index: 2
 		&::before
 			opacity: 1
-		.card-label
-			visibility: hidden
-			opacity: 0
-		.card-quick-view,
-		.card-attributes
-			visibility: visible
-			opacity: 1
-			transform: none
+		+media-breakpoint-up(md)
+			.card-label
+				visibility: hidden
+				opacity: 0
+			.card-quick-view,
+			.card-attributes
+				visibility: visible
+				opacity: 1
+				transform: none
 
 	// Quick view
 	.card-quick-view
@@ -59,10 +60,14 @@
 		z-index: 3
 		opacity: 0
 		transition: $trs
+		+media-breakpoint-down(sm)
+			display: none
 		.btn
 			width: 100%
 			font-size: 15px
 			color: #219653
+			+media-breakpoint-down(md)
+				font-size: 13px
 
 	// Card labels
 	.card-label
@@ -72,8 +77,8 @@
 		z-index: 3
 		padding: 4px 6px
 		border-radius: 4px
-		@include font-size(xxs)
-		font-weight: $w-bold
+		+font-size(xxs)
+		font-weight: $w-medium
 		transition: all .15s ease
 		&--yellow
 			background-color: $yellow
@@ -167,7 +172,11 @@
 			display: block
 			padding: 8px 5px
 			color: $text-400
-			@include font-size(xxs)
+			+font-size(xxs)
+			white-space: nowrap
+			+media-breakpoint-down(xs)
+				padding-left: 2px
+				padding-right: 2px
 			&::before
 				content: ''
 				display: inline-block
@@ -192,20 +201,35 @@
 			height: 60px
 			font-size: 15px
 			line-height: 20px
+			+media-breakpoint-down(md)
+				height: 65px
+				+font-size(xxs)
+		// Price
 		.price
 			display: flex
 			flex-wrap: wrap
 			align-items: center
-			margin-top: 12px
+			height: 32px
+			padding-top: 12px
+			+media-breakpoint-down(md)
+				padding-top: 8px
+				ins
+					flex: 0 0 100%
+					order: 1
+					+font-size(xxs)
+				del
+					flex: 0 0 100%
+					order: 0
 			ins
 				margin-right: 8px
 				color: $text-500
-				@include font-size(xs)
+				font-size: 15px
 				font-weight: $w-bold
+				line-height: 1
 				text-decoration: none
 			del
 				color: $warning
-				@include font-size(xxs)
+				+font-size(xxs)
 	
 	// Card buttons (Compare, Wishlist, Add to cart)
 	.card-buttons
@@ -246,8 +270,13 @@
 					color: $text-500
 				&:focus
 					z-index: 1
-		.btn-cart
-			// width: 100%
+		// Quick buy button
+		.btn-quick-buy
+			margin-top: 8px
+			font-size: 15px
+			color: #219653
+			+media-breakpoint-down(md)
+				font-size: 13px
 
 	// Card attributes
 	.card-attributes
@@ -266,7 +295,7 @@
 		transition: all .15s ease
 		> div
 			color: $text-400
-			@include font-size(xxs)
+			+font-size(xxs)
 			> b, > strong
 				color: $text-500
 			&:not(:last-child)
@@ -280,26 +309,50 @@
 	padding: 24px
 	border-radius: 8px
 	background-color: $background
-	.card-meta
+	+media-breakpoint-down(xs)
+		padding: 16px
+	.card-heading
+		display: flex
+		align-items: center
+		justify-content: space-between
+		+media-breakpoint-down(xxs)
+			flex-direction: column
+			align-items: flex-start
 		.rating
 			display: flex
 			align-items: center
 			.icon-rating
 				width: 24px
 				height: 24px
+				+media-breakpoint-down(sm)
+					width: 20px
+					height: 20px
 				&:not(:last-child)
 					margin-right: 4px
 				&:not(.icon-rating--filled)
 					fill: $text-200
 				&--filled
 					fill: $yellow
+		.date
+			color: $text-400
+			font-size: 13px
+			line-height: 1
+			+media-breakpoint-down(xxs)
+				margin-top: 8px
+	.card-meta
+		margin-top: 24px
+		+media-breakpoint-down(sm)
+			margin-top: 16px
 		.name
-			margin-top: 24px
-			@include font-size(sm)
+			+font-size(sm)
 		.text
 			margin-top: 16px
 			color: $text-400
 			> p
+				+font-size(xs)
+				+media-breakpoint-down(lg)
+					font-size: 13px
+					line-height: 20px
 				&:last-child
 					margin-bottom: 0
 
@@ -314,6 +367,8 @@
 	.card-photo
 		border-radius: 8px
 		height: 200px
+		+media-breakpoint-down(xs)
+			height: 160px
 		img
 			transition: transform .35s ease
 	.card-meta
