--- a/app/sass/helpers/_mixins.sass
+++ b/app/sass/helpers/_mixins.sass
@@ -3,24 +3,36 @@
 	@if $size == 'xl'
 		font-size: 34px
 		line-height: 40px
-		+media-breakpoint-down(sm)
-			font-size: 24px
+		+media-breakpoint-down(lg)
+			font-size: 27px
+			line-height: 32px
+		+media-breakpoint-down(md)
+			font-size: 22px
 			line-height: 32px
 
 	@else if $size == 'lg'
 		font-size: 27px
 		line-height: 32px
-		+media-breakpoint-down(sm)
+		+media-breakpoint-down(lg)
+			font-size: 22px
+			line-height: 32px
+		+media-breakpoint-down(md)
 			font-size: 20px
 			line-height: 24px
 
 	@else if $size == 'md'
 		font-size: 22px
 		line-height: 32px
+		+media-breakpoint-down(lg)
+			font-size: 18px
+			line-height: 24px
 
 	@else if $size == 'sm'
 		font-size: 18px
 		line-height: 24px
+		+media-breakpoint-down(lg)
+			font-size: 16px
+			line-height: 22px
 
 	@else if $size == 'xs'
 		font-size: 15px
